--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "animejs": "^2.0.2",
+    "axios": "^0.16.2",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.17.1",
     "color-convert": "^1.9.0",
